	libraries path for rv32.
	* sysdeps/riscv/bits/wordsize.h: Supprt rv32.
	* sysdeps/riscv/nptl/bits/pthreadtypes-arch.h: Likewise.
	* sysdeps/riscv/sfp-machine.h: Likewise.
	* sysdeps/riscv/sys/asm.h: Likewise.
	* sysdeps/unix/sysv/linux/riscv/rv32/jmp_buf-macros.h: New file.
	* sysdeps/unix/sysv/linux/riscv/rv32/lockf64.c: Likewise.

2018-11-03  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/mach/hurd/msync.c: New file.

2018-11-02  Florian Weimer  <fweimer@redhat.com>

	* support/shell-container.c (copy_func): Call
	support_copy_file_range instead of copy_file_range to support
	cross-device copies.

2018-11-02  Florian Weimer  <fweimer@redhat.com>

	* support/test-container.c: Include <libc-pointer-arith.h> for
	ALIGN_UP.

2018-11-01  Zong Li  <zong@andestech.com>

	* soft-fp/op-8.h (_FP_FRAC_SET_8, _FP_FRAC_ADD_8, _FP_FRAC_SUB_8)
	(_FP_FRAC_CLZ_8, _FP_MINFRAC_8, _FP_FRAC_NEGP_8, _FP_FRAC_ZEROP_8)
	(_FP_FRAC_HIGHBIT_DW_8, _FP_FRAC_COPY_4_8, _FP_FRAC_COPY_8_4)
	(__FP_FRAC_SET_8): Add implementation for RV32 use.

	* soft-fp/op-4.h (_FP_FRAC_SUB_3, _FP_FRAC_SUB_4): Use temporary
	variable to avoid overlap arguments.

2018-11-01  Joseph Myers  <joseph@codesourcery.com>

	* posix/bug-regex22.c (main): Use puts with distinct error
	messages for unexpected success of re_compile_pattern, not printf
	with NULL argument to %s.

	* stdio-common/bug22.c: Include <libc-diag.h>.
	(do_test): Disable -Wformat-overflow= warnings around fprintf
	calls outputting more than INT_MAX characters.
	* stdio-common/tst-printf.c: Disable -Wformat-overflow= warnings
	around printf call with NULL %s argument.

	[BZ #23848]
	* sysdeps/unix/sysv/linux/sparc/kernel-features.h [!__arch64__ &&
	__LINUX_KERNEL_VERSION < 0x040400] (__ASSUME_SENDMSG_SYSCALL):
	Undefine.
	[!__arch64__ && __LINUX_KERNEL_VERSION < 0x040400]
	(__ASSUME_RECVMSG_SYSCALL): Likewise.
	[!__arch64__ && __LINUX_KERNEL_VERSION < 0x040400]
	(__ASSUME_SENDTO_SYSCALL): Likewise.